--- a/index.html
+++ b/index.html
@@ -6,6 +6,63 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>welcome to my portfolio </h1>
+    <a href="">
+        <button>About</button>
+    </a>
+    <a href="">
+        <button>projects</button>
+        </a>
+        <a href="">
+            <button>skills</button>
+        </a>
+        <a href="">
+            <button>contact</button>
+        </a>
+    <h1>MANIKANTA</h1>
+    <P>I am passonate web developer with a focus on front end technologies</P>
+    pursuing my degree in <em>TSR TBK DEGREE COLLEGE</em> I have learnt webdevelopment from <br>code with swaroop<p>click here <strong>to check out what i have learnt in HTML,CSS,JS</strong></p> 
+    <hr>
+    <h1>my skills</h1>
+    <ol>
+        <li>Python basics</li>
+        <li>Htmk basics</li>
+        <li>css basics</li>
+        <li>Java script basics</li>
+    </ol>
+    <h1>Contact me </h1>
+    <p>feel free to get in to touch with me using the form below</p>
+    <form action="">
+        <label form="name">name</label>
+        <input type="text"name ><br> <br>
+        <label  form="email">email></label>
+        <input type="email"email><br>
+       <b>choose your gender</b>
+
+       <input type="radio" id="male">
+       <label for="male">male</label>
+       <input type="radio" id="female">
+       <label for="female">female</label>
+<br>
+
+<b>select your intreast</b>
+<input type="checkbox" id="coding" value="coding">
+<label for="coding">coding</label>
+<input type="checkbox" id="reading" value="reading">
+<label for="reading">reading</label>
+
+<br>
+<label for="bio">bio</label>
+<input type="text">
+<br>
+
+<button type="sumbit">submit</button>
+
+
+
+
+    </form>
+    
     
 </body>
 </html>
