--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>welcome to my portfolio </h1>
+
     <a href="">
         <button>About</button>
     </a>
@@ -20,6 +21,7 @@
             <button>contact</button>
         </a>
     <h1>MANIKANTA</h1>
+    <img src="Html media/demo.jpg"  height="500px;"  width="800px" alt="a photo of me ">
     <P>I am passonate web developer with a focus on front end technologies</P>
     pursuing my degree in <em>TSR TBK DEGREE COLLEGE</em> I have learnt webdevelopment from <br>code with swaroop<p>click here <strong>to check out what i have learnt in HTML,CSS,JS</strong></p> 
     <hr>
@@ -66,4 +68,5 @@
     
 </body>
 </html>
-<
+
+
