--- a/css units/01units.html
+++ b/css units/01units.html
@@ -6,11 +6,17 @@
     <title>Document</title>
 <style>
         h1{
-            color: rgb(255, 0, 0);
+            font-size: 20px;
+            display: inline-block;
+
         }
         
-        img{ height: 200px; width: 300px;
-        }
+        img{ 
+            display:inline;
+            position:relative;
+            top:10px;
+            height: 200px;
+        
 
 
     </style>
@@ -18,8 +24,12 @@
 
 </head>
 <body>
-    <h1>this is heading2</h1>
+    <h1>this is heading1</h1>
+
 
     <img src="https://www.w3schools.com/css/img_fjords.jpg" alt="fjords" width="300" height="200">
+    <p>this image taken from google</p><br><br>
+    <img style="float:right;"src ="https://www.w3schools.com/css/img_fjords.jpg" alt="fjords" width="300" height="200">
+    <p>this image taken from google</p>  
 </body>
 </html>
