--- a/css units/01units.html
+++ b/css units/01units.html
@@ -15,7 +15,7 @@
             display:inline;
             position:relative;
             top:10px;
-            height: 200px;
+            height: 200px;}
         
 
 
