--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <header>
@@ -57,24 +58,40 @@
                 <tr>
                     <td>simple python calculator</td>
                     <td>i have built a simple python calclator by code with swaroop</td>
-                
+              
             </table>
-            <hr>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            </section>
+           <section id="contacts">
+              <h1>Contact me </h1>
+                <p>feel free to get in to touch with me using the form below</p>
+              <form action="">
+                   <label form="name">name</label>
+                   <input type="text"name ><br> <br>
+                   <label  form="email">email</label>
+                   <input type="email"email><br>
+                   <b>choose your gender</b>
 
-         <section id="contacts">
-    <h1>Contact me </h1>
-    <p>feel free to get in to touch with me using the form below</p>
-    <form action="">
-        <label form="name">name</label>
-        <input type="text"name ><br> <br>
-        <label  form="email">email</label>
-        <input type="email"email><br>
-       <b>choose your gender</b>
-
-       <input type="radio" id="male">
-       <label for="male">male</label>
-       <input type="radio" id="female">
-       <label for="female">female</label>
+                        <input type="radio" id="male">
+                        <label for="male">male</label>
+                        <input type="radio" id="female">
+                        <label for="female">female</label>
 <br>
 
 <b>select your intreast</b>
@@ -88,7 +105,7 @@
 <input type="text">
 <br>
 
-<button type="sumbit">submit</button>
+<button type="sumbit" class="submit">submit</button>
 
 
 
@@ -96,9 +113,10 @@
     </form>
 </section>
     </main>
-
-    <footer>@ 2025 my portfolio</footer>
-
+    <button class="fixedbutton">TOP</button>
+    <footer>
+         <p> @2025 my portfolio</p>
+        </footer>
 </body>
 </html>
 
