--- a/Assignment/04assignment.html
+++ b/Assignment/04assignment.html
@@ -12,7 +12,7 @@
     }
 
     .container {
-      max-width: 1200px;
+      max-width: 1500px;
       margin: auto;
       padding: 40px 20px;
       position: relative;
@@ -23,7 +23,7 @@
       top: 20px;
       right: 20px;
       text-align: right;
-      font-size: 14px;
+      font-size: 25px;
     }
 
     .social a {
@@ -34,11 +34,11 @@
     }
 
     .title {
-      text-align: left;
+      text-align:left;
       font-size: 100px;
       font-weight: bolder;
       color: #fbe8cb;
-      margin-bottom: 60px;
+      margin-bottom: 200px;
     }
 
     .skill-section {
@@ -56,9 +56,9 @@
     }
 
     .skill-text {
-      width: 60%;
-      font-size: 16px;
-      line-height: 1.6;
+      width: 75%;
+      font-size: 20px;
+      line-height: 20px;
     }
 
     .skill-text strong {
@@ -78,21 +78,29 @@
   <div class="container">
 
     <div class="social">
-      <a href="https://www.instagram.com/hanokpaul9923 ">hanokpaul</a>
+      <a href="https://www.instagram.com/hanokpaul9923 ">@hanokpaul</a>
     </div>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
 
+        <br>
+        <br>
     <div class="title">PERSONAL SKILLS</div>
 
     <div class="skill-section">
-      <img src="" alt="Photography">
+      <img src="pic2.jpg" alt="Photography">
       <div class="skill-text">
         <strong>Photography</strong>
-        A passionate self-taught photographer with a keen eye for storytelling through visuals. Experienced in capturing portraits, candid moments, and nature with creative composition and lighting techniques. Continuously exploring the artistic and technical aspects of visual framing.
+        I have developed strong Photographyskills through hands on experience capturing a variety of subjects, including landscapes,portraits,and events.
+
       </div>
     </div>
 
     <div class="skill-section reverse">
-      <img src="videography.jpg" alt="Videography">
+      <img src="pic1.jpg" alt="Videoediting">
       <div class="skill-text">
         <strong>Video editing</strong>
         Skilled in crafting compelling video content, from short cinematic clips to event reels. Proficient with camera work, lighting, and basic editing workflows. Loves bringing ideas to life through motion and emotion.
