--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <h1>welcome to my portfolio </h1>
-
+    <div>
     <a href="">
         <button>About</button>
     </a>
@@ -22,6 +22,7 @@
         <a href="">
             <button>contact</button>
         </a>
+        </div>
         </header>
         <main>
         <section id="about">
